# datastore

./: CMakeLists.txt  Makefile  README.md  data_store.hpp  meta_programming.hpp
datastore/: data_store.hpp
test/: CMakeLists.txt  tests.cpp
